--- a/index.html
+++ b/index.html
@@ -1,27 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <link rel="stylesheet" href="style.css">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <main>
-        <section id="list">
-            <h1>List</h1>
-            <template id="studentTemplate">
-                <article>
-                    <img class="picture"></img>
-<div class="firstname"></div>
-<div class="lastname"></div>
-<div class="middlename"></div>
-<div class="nickname"></div>
-<div class="house"></div>
-</article>
-            </template>
-        </section>
+      <h1>List</h1>
+      <input type="text" id="searchByName" />
+      <details id="filterConteiner">
+        <button class="house">All students</button>
+        <button class="house">Gryffindor</button>
+        <button class="house">Hufflepuff</button>
+        <button class="house">Slytherin</button>
+        <button class="house">Ravenclaw</button>
+      </details>
+      <select class="sort">
+        <option value="firstName" class="firstName">By name</option>
+        <option value="lastName" class="lastName">By lastname</option>
+        <option value="default" class="default">Reset</option>
+      </select>
+
+      <section id="list">
+        <template id="studentTemplate">
+          <article>
+            <img class="picture" />
+            <div class="firstname"></div>
+            <div class="lastname"></div>
+            <div class="middlename"></div>
+            <div class="nickname"></div>
+            <div class="house"></div>
+          </article>
+        </template>
+      </section>
+      <div class="modal_bg hide">
+        <div class="modal-content">
+          <img class="picture" />
+          <div class="name">name</div>
+          <div class="bloodtype">blood type</div>
+          <!-- <div class="attributes">Attributes</div> -->
+          <button class="expell/unexpell">expell</button>
+          <button class="add/remove-prefect">Prefect</button>
+          <button class="squad">squad</button>
+        </div>
+      </div>
     </main>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
