search option done

--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
             <div class="middlename"></div>
             <div class="nickname"></div>
             <div class="house"></div>
+            <div class="expell">
+              <img src="./button/expel-button.png" alt="expell-option" />
+            </div>
           </article>
         </template>
       </section>
