expell function added

--- a/index.html
+++ b/index.html
@@ -32,9 +32,7 @@
             <div class="middlename"></div>
             <div class="nickname"></div>
             <div class="house"></div>
-            <div class="expell">
-              <img src="./button/expel-button.png" alt="expell-option" />
-            </div>
+            <button class="expell">expell</button>
           </article>
         </template>
       </section>
